# duckduckgo-mcp-server

./: Dockerfile  LICENSE  README.md  pyproject.toml  server.py  smithery.yaml
src/duckduckgo_mcp_server/: server.py
