[project]
name = "duckduckgo-mcp-server"
version = "0.1.0"
description = "MCP Server for searching via DuckDuckGo"
readme = "README.md"
authors = [{ name = "Nick Clyde", email = "nick@clyde.tech" }]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "httpx>=0.28.1",
    "mcp[cli]>=1.3.0",
    "rich>=13.9.4",
    "shellingham>=1.5.4",
    "typer>=0.15.1",
]
