[project]
name = "duckduckgo-mcp-server"
version = "0.1.1"
description = "MCP Server for searching via DuckDuckGo"
readme = "README.md"
authors = [{ name = "Nick Clyde", email = "nick@clyde.tech" }]
requires-python = ">=3.10"
dependencies = ["beautifulsoup4>=4.13.3", "httpx>=0.28.1", "mcp[cli]>=1.3.0"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/nickclyde/duckduckgo-mcp-server"
Issues = "https://github.com/nickclyde/duckduckgo-mcp-server/issues"

[project.scripts]
duckduckgo-mcp-server = "duckduckgo_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
